// Copyright 2023-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package example.v1;

import "buf/validate/validate.proto";
import "gofakeit/gofakeit.proto";

message BenchScalar {
  int32 x = 1 [
    (buf.validate.field).int32.gt = 0,
    (gofakeit.generate).tag = "{intrange:1,100}"
  ];
}

message BenchRepeatedScalar {
  repeated int32 x = 1 [
    (buf.validate.field).repeated.max_items = 10,
    (gofakeit.generate).repeated.range.max = 10
  ];
}

message BenchRepeatedMessage {
  repeated BenchScalar x = 1 [
    (buf.validate.field).repeated.max_items = 10,
    (gofakeit.generate).repeated.range.max = 10
  ];
}

message BenchRepeatedScalarUnique {
  repeated float x = 1 [(buf.validate.field).repeated.unique = true];
}

message BenchRepeatedBytesUnique {
  repeated bytes x = 1 [(buf.validate.field).repeated.unique = true];
}
